--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,10 @@ publication_category:
     title: 'Journal Articles'
   conferences:
     title: 'Conference Papers'
+  academic:
+    title: 'Academic Theses'
+  preprints:
+    title: 'Preprints'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
