--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,8 @@ publication_category:
     title: 'Academic Theses'
   preprints:
     title: 'Preprints'
+  supervised:
+    title: 'Supervised Theses'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
