--- a/.github/workflows/scrape_talks.yml
+++ b/.github/workflows/scrape_talks.yml
@@ -1,10 +1,11 @@
 name: Scrape Talk Locations
 
 on:
-  push:
-    paths:
-      - 'talks/**'
-      - 'talkmap.ipynb'
+  workflow_dispatch:
+#  push:
+#    paths:
+#      - 'talks/**'
+#      - 'talkmap.ipynb'
 
 jobs:
   build:
